syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoweb.account.proto.rest.api";

import "setting/rest.proto";
import "account/rest/data/account.proto";

message GetAccountRequest {
}

message GetAccountResponse {
    account.rest.data.Account account = 1;
}

message GetAccount {

    option (rest.api) = {method: "GET" path:"/account/{accountId}"};

    GetAccountRequest request = 1;
    GetAccountResponse response = 2;

    // 约定：path_variable 开头的命名均为路劲参数
    int64 path_variable_account_id = 3;
}